# radio

./: Cargo.toml  build.rs  build_orangepi_zero.sh
.cargo/: config
src/: http.rs  main.rs  mpv_simple.rs  player.rs
web/: api.js  delete.html  delete.js  index.html  index.js  new.css  new.html  new.js  style.css
